--- a/01_basic-python/02_data-types.ipynb
+++ b/01_basic-python/02_data-types.ipynb
@@ -93,7 +93,7 @@
    ]
   },
   {
-     "cell_type": "code",
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -958,6 +958,15 @@
     "**Hint**\n",
     "* At first try to read the scale and the speed list. Print them.\n",
     "* Then try to define a for loop which iterates over the list. (Google is your friend)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {'scale': 3.6, 'speed': [0., 15., 22., 30.], 'label': \"Scaled speed\"}"
    ]
   },
   {
