--- a/02_tools-and-packages/00_tools-for-python.ipynb
+++ b/02_tools-and-packages/00_tools-for-python.ipynb
@@ -227,6 +227,17 @@
     "\n",
     "<img src=\"jupyter_nb_extensions.png\" alt=\"Jupyter extended\" width=\"800\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
